# spammy-rust

./: .gitignore  Cargo.toml  README.md
src/: app.rs  input_handler.rs  key_sender.rs  keyboard.rs  main.rs  profile.rs  ui.rs
