[package]
name = "spammy"
version = "0.1.0"
edition = "2021"

[dependencies]
# UI
egui = "0.27"
eframe = "0.27"
egui-wgpu = "0.27"
wgpu = "0.20"
winit = "0.30"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Linux input handling
evdev = "0.12"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }

# Utilities
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
lazy_static = "1.4"
crossbeam-channel = "0.5"
ctrlc = "3.4"

[[bin]]
name = "spammy"
path = "src/main.rs"
