[package]
name = "spammy"
version = "0.1.0"
edition = "2021"

[dependencies]
# UI
egui = "0.27"
eframe = "0.27"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Linux input handling
evdev = "0.12"
libc = "0.2"

# Utilities
lazy_static = "1.4"
ctrlc = "3.4"
dirs = "5.0"

[[bin]]
name = "spammy"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
